--- a/public/index.html
+++ b/public/index.html
@@ -59,14 +59,12 @@
     <nav id="nav-bar" class="clearfix">
       <img class="logo" src="/images/bird.png" width="80px" height="80px">
       <span class="header">Tweeter</span>
-      <button id="compose" type="button" class="button">Compose</button>
+      <button id="compose" type="button" class="button"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Compose</button>
 
     </nav>
 
-
-
     <!-- Page-specific (main) content here -->
-    <main class="container">
+    <main>
 
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
@@ -78,8 +76,8 @@
       </section>
 
       <section id="tweet-boxes">
-        <!-- <article class="tweet">
-          <header>
+        <article class="tweet">
+          <header class="clearfix">
             <img class="userimg" src="https://i.ytimg.com/vi/IrC0jOIpt_8/maxresdefault.jpg">
             <h3 class="user-name">Bill Fields</h3>
             <p class="handle">@XmasPoo</p>
@@ -94,7 +92,7 @@
             <p class="date"> days ago </p>
 
           </footer>
-        </article> -->
+        </article>
       </section>
 
     </main>
