change time stamp

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
       </section>
 
       <section id="tweet-boxes">
-        <article class="tweet">
+        <!-- <article class="tweet">
           <header class="clearfix">
             <img class="userimg" src="https://i.ytimg.com/vi/IrC0jOIpt_8/maxresdefault.jpg">
             <h3 class="user-name">Bill Fields</h3>
@@ -92,7 +92,7 @@
             <p class="date"> days ago </p>
 
           </footer>
-        </article>
+        </article> -->
       </section>
 
     </main>
